Last fixes after Viu and Monica's feedback

--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -1,5 +1,5 @@
 ---
-date: "2019-03-31"
+date: "2019-04-02"
 author: "yoko"
 title: "Tax on startups shares in Switzerland"
 description: "A startup’s equity has a certain value and thus needs to be declared by the shareholders in their tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees."
@@ -9,7 +9,7 @@ images:
   - tax-ch/HoldingConfirmation.png
 ---
 
-A startup’s shares has a certain value and thus needs to be declared by the shareholders in their tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees so that they can correctly declare it to the tax office. All the explanations below are only valid for non-listed companies.
+A startup’s shares has a certain value and thus needs to be declared by the shareholders in their private tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees so that they can correctly declare it to the tax office. All the explanations below are only valid for non-listed companies.
 
 #### Stock
 In short, you need to communicate the number of shares your investor or employee holds, together with the corresponding tax value.<br/>
@@ -20,7 +20,7 @@ One more thing: If your startup is already giving out dividends, don’t forget 
 <Img src="HoldingConfirmation.png" size="600" caption="A holding confirmation as downloadable on Ledgy" />
 
 #### Stock options
-What you should communicate: Number of options granted to the person with value: 0. Declare it alongside of the salary statement for employees, in a separate sheet as shown in [these examples](https://www.estv.admin.ch/dam/estv/de/dokumente/bundessteuer/kreisschreiben/2004/1-037-D-2012_Anhang3.pdf.download.pdf/1-037-D-2012-d_Anhang3.pdf) by the Swiss tax office. Send a holding confirmation to your investors. For exercised options: see *Stock* section.
+What you should communicate: Number of options granted to the person with value: 0. Declare it alongside of the salary statement for employees, in a separate sheet as shown in [these examples](https://www.estv.admin.ch/dam/estv/de/dokumente/bundessteuer/kreisschreiben/2004/1-037-D-2012_Anhang3.pdf.download.pdf/1-037-D-2012-d_Anhang3.pdf) by the Swiss tax office. Send a holding confirmation to your investors.
 
 #### Phantom stock options
 Similarly to stock options: Number of phantom stock options granted with value: 0. Declare it alongside of the salary statement for employees and send a holding confirmation to your investors.
@@ -36,4 +36,4 @@ You can have a look at such a holding confirmation [on the Ledgy demo](https://d
 
 
 
-_***Thanks*** to Monica Maurer from [Audit & Tax AG](https://www.act-ag.ch) for answering our questions about how to calculate the tax value of startups equity._
+_***Thanks*** to Monica Maurer from [ACT Audit & Tax AG](https://www.act-ag.ch) for answering our questions about how to calculate the tax value of startups equity._
