fixed header capitalization

--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2019-04-02"
 author: "yoko"
-title: "Tax on startups shares in Switzerland"
+title: "Tax on Startups’ Shares in Switzerland"
 description: "A startup’s equity has a certain value and thus needs to be declared by the shareholders in their tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees."
 coverImage: tax-ch/tax-cover.jpg
 images:
