--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -12,9 +12,11 @@ images:
 A startup’s shares has a certain value and thus needs to be declared by the shareholders in their private tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees so that they can correctly declare it to the tax office. All the explanations below are only valid for non-listed companies.
 
 #### Stock
-In short, you need to communicate the number of shares your investor or employee holds, together with the corresponding tax value.<br/>
-How to calculate this tax value? In the case of startups it is calculated according to a guideline grouping several recognized methods by the [Swiss tax authorities](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf).
-The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity’s value at a very low price. Indeed you only need to declare the asset value (_Substanzwert_), which is simply given by your startup’s net asset (_Eigenkapital_). This has been established to encourage startups in the canton of Zurich.<br/>
+In short, you need to communicate the number of shares your investor or employee holds, together with the corresponding tax value.
+
+How to calculate this tax value? In the case of startups it is calculated according to a [guideline](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf) grouping several recognized methods by the Swiss tax authorities.
+The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity’s value at a very low price. Indeed you only need to declare the asset value (_Substanzwert_), which is simply given by your startup’s net asset (_Eigenkapital_). This has been established to encourage startups in the canton of Zurich.
+
 One more thing: If your startup is already giving out dividends, don’t forget about the qualified stake rule (_qualifizierte Beteiligung_) in case the shareholder holds more than 10% of the company's stock ([Here](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-35-1.html) are more informations for the canton of Zurich.)
 
 <Img src="HoldingConfirmation.png" size="600" caption="A holding confirmation as downloadable on Ledgy" />
@@ -30,7 +32,7 @@ Similarly to stock options: Number of phantom stock options granted with value: 
 #### A concrete example with VIU Eyeware using Ledgy
 [VIU](https://shopviu.com) has stock and phantom stock options for employees. We’re proud that Ledgy helps making VIU’s process of sending holding confirmations easier.
 We've asked Peter Kaeser, cofounder and COO at VIU about how he uses Ledgy. Here's what he said:
-"Instead of the cumbersome process of copy-pasting values from an excel sheet into individual emails, Ledgy provides a ready-to-be-downloaded holding confirmation for all stakeholders." <br/>
+“Instead of the cumbersome process of copy-pasting values from an excel sheet into individual emails, Ledgy provides a ready-to-be-downloaded holding confirmation for all stakeholders.”
 You can have a look at such a holding confirmation [on the Ledgy demo](https://demo.ledgy.com/XihSjPeB9BeP86TK2/stakeholders) when clicking on _download holding confirmation_.
 <br/>
 
