fixes after grammarly

--- a/src/markdown/blog/tax-ch.mdx
+++ b/src/markdown/blog/tax-ch.mdx
@@ -9,12 +9,12 @@ images:
   - tax-ch/HoldingConfirmation.png
 ---
 
-A startup’s shares has a certain value and thus needs to be declared by the shareholders in their private tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees so that they can correctly declare it to the tax office. All the explanations below are only valid for non-listed companies.
+Startups’ shares have a certain value and thus need to be declared by the shareholders in their private tax declaration yearly. Here’s a mini guide of how to communicate the equity’s value to your startup’s investors and employees so that they can correctly declare it to the tax office. All the explanations below are only valid for non-listed companies.
 
 #### Stock
 In short, you need to communicate the number of shares your investor or employee holds, together with the corresponding tax value.
 
-How to calculate this tax value? In the case of startups it is calculated according to a [guideline](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf) grouping several recognized methods by the Swiss tax authorities.
+How to calculate this tax value? In the case of startups, it is calculated according to a [guideline](http://www.steuerkonferenz.ch/downloads/kreisschreiben/KS_28_Final_D_20180326.pdf) grouping several recognized methods by the Swiss tax authorities.
 The above guideline is valid in every canton in Switzerland. If you are based in Zurich, there is even a [special rule for startups](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-39-1.html), that allows you to declare your equity’s value at a very low price. Indeed you only need to declare the asset value (_Substanzwert_), which is simply given by your startup’s net asset (_Eigenkapital_). This has been established to encourage startups in the canton of Zurich.
 
 One more thing: If your startup is already giving out dividends, don’t forget about the qualified stake rule (_qualifizierte Beteiligung_) in case the shareholder holds more than 10% of the company's stock ([Here](https://www.steueramt.zh.ch/internet/finanzdirektion/ksta/de/steuerbuch/zuercher-steuerbuch-definition/zstb-35-1.html) are more informations for the canton of Zurich.)
@@ -22,16 +22,16 @@ One more thing: If your startup is already giving out dividends, don’t forget 
 <Img src="HoldingConfirmation.png" size="600" caption="A holding confirmation as downloadable on Ledgy" />
 
 #### Stock options
-What you should communicate: Number of options granted to the person with value: 0. Declare it alongside of the salary statement for employees, in a separate sheet as shown in [these examples](https://www.estv.admin.ch/dam/estv/de/dokumente/bundessteuer/kreisschreiben/2004/1-037-D-2012_Anhang3.pdf.download.pdf/1-037-D-2012-d_Anhang3.pdf) by the Swiss tax office. Send a holding confirmation to your investors.
+What you should communicate: Number of options granted to the person with value: 0. Declare it alongside the salary statement for employees, in a separate sheet as shown in [these examples](https://www.estv.admin.ch/dam/estv/de/dokumente/bundessteuer/kreisschreiben/2004/1-037-D-2012_Anhang3.pdf.download.pdf/1-037-D-2012-d_Anhang3.pdf) by the Swiss tax office. Send a holding confirmation to your investors.
 
 #### Phantom stock options
-Similarly to stock options: Number of phantom stock options granted with value: 0. Declare it alongside of the salary statement for employees and send a holding confirmation to your investors.
+Similarly to stock options: Number of phantom stock options granted with value: 0. Declare it alongside the salary statement for employees and send a holding confirmation to your investors.
 
 <Img src="viu.jpg" align="right" size="300" />
 
 #### A concrete example with VIU Eyeware using Ledgy
-[VIU](https://shopviu.com) has stock and phantom stock options for employees. We’re proud that Ledgy helps making VIU’s process of sending holding confirmations easier.
-We've asked Peter Kaeser, cofounder and COO at VIU about how he uses Ledgy. Here's what he said:
+[VIU](https://shopviu.com) has stock and phantom stock options for employees. We’re proud that Ledgy helps to make VIU’s process of sending holding confirmations easier.
+We've asked Peter Kaeser, co-founder and COO at VIU about how he uses Ledgy. Here's what he said:
 “Instead of the cumbersome process of copy-pasting values from an excel sheet into individual emails, Ledgy provides a ready-to-be-downloaded holding confirmation for all stakeholders.”
 You can have a look at such a holding confirmation [on the Ledgy demo](https://demo.ledgy.com/XihSjPeB9BeP86TK2/stakeholders) when clicking on _download holding confirmation_.
 <br/>
