--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -724,7 +724,7 @@ msgstr "Privacy made in Europe. Weil deine Beteiligungsdaten nicht für jeden ge
 
 #: src/pages/privacy.jsx:45
 msgid "Privacy made in Europe. Because your equity data is not for everyone.<0/><1/>We understand how sensitive equity information is for any business. That’s why your privacy and your data’s security is crucial to us. We also know that long and complicated privacy policies are not very helpful, so we give an overview up-front."
-msgstr "Privacy made in Europe. Weil deine Beteiligungsdaten nicht für jeden gedacht sind.<0><1/>Uns ist bewusst, wie wichtig und vertraulich Beteiligungsdaten für jede Firma sind. Deshalb nehmen wir deine Privatsphäre und die Sicherheit deiner Daten sehr ernst. Wir wissen auch, dass lange und komplizierte Datenschutzrichtlinien nicht sehr hilfreich sind, daher geben wir im Voraus einen Überblick."
+msgstr "Privacy made in Europe. Weil deine Beteiligungsdaten nicht für jeden gedacht sind.<0/><1/>Uns ist bewusst, wie wichtig und vertraulich Beteiligungsdaten für jede Firma sind. Deshalb nehmen wir deine Privatsphäre und die Sicherheit deiner Daten sehr ernst. Wir wissen auch, dass lange und komplizierte Datenschutzrichtlinien nicht sehr hilfreich sind, daher geben wir im Voraus einen Überblick."
 
 #: src/layouts/index.jsx:189
 msgid "Product"
