--- a/src/markdown/legal/dpa.mdx
+++ b/src/markdown/legal/dpa.mdx
@@ -24,7 +24,7 @@ Insofar as the Data Processor will be processing Personal Data of the Data Contr
 The Parties hereby agree to be bound by the provisions and obligations set forth in this Addendum in respect of all their data protection obligations and data processing relationships and agree that any data protection and data processing obligations as agreed to previously amongst the Parties shall be deleted and repealed in its entirety and be replaced with this Addendum.
 
 ### 3 Information required by Data Privacy Law
-The Parties agree to the following sets out the information required by the EU and Swiss Data Privacy Law:
+The Parties agree to the following information, as required by the EU and Swiss Data Privacy Law:
 
 **Subject matter of processing**<br />
 Equity management services by means of an online software application (the **“Application”**) and the fulfillment of contractual obligations under the Services Agreement and this Data Processing Addendum.
@@ -60,7 +60,7 @@ maintain all appropriate technical and organizational measures to ensure the sec
 assist, to the extent possible, the Customer to fulfill its obligations in responding to requests for exercising of Data Subject rights set out in the applicable Data Privacy Law;
 
 **5.5**<br />
-not engage any other processor in relation to the Services except in accordance with Customer’s general authorisation, under which Ledgy shall inform Customer of any proposed changes to processors by publishing a list on its Website and Customer shall have a right to veto proposed changes in good faith for material grounds within 30 days of publication. For the avoidance of doubt, Ledgy shall enter into an agreement with each sub-contractor containing obligations which are equivalent to those set out in this Clause 5;
+not engage any other processor in relation to the Services except in accordance with Customer’s general authorization, under which Ledgy shall inform Customer of any proposed changes to processors by publishing a list on its Website and Customer shall have a right to veto proposed changes in good faith for material grounds within 30 days of publication. For the avoidance of doubt, Ledgy shall enter into an agreement with each sub-contractor containing obligations which are equivalent to those set out in this Clause 5;
 
 **5.6**<br />
 subcontracting relationships within the meaning of this Clause 5 shall not include services which Ledgy makes use of with third parties as an ancillary service to support the execution of the order. This includes, for example, telecommunications services, maintenance and user service, data hosting services, cleaning staff, inspectors or the disposal of data media. However, Ledgy shall be obliged to make appropriate contractual agreements in accordance with the law and to take control measures in order to guarantee the protection and security of the Customer’s data even in the case of ancillary services awarded to third parties;
