--- a/src/markdown/legal/privacy-policy.mdx
+++ b/src/markdown/legal/privacy-policy.mdx
@@ -118,7 +118,7 @@ To maintain records and conduct compliance checks, e.g. anti-money laundering, f
 ### 3 How we collect personal data
 
 ##### Directly
-Our Website and electronic communications
+Via our Website and electronic communications
 * When you or your organization use our Services.
 * When you or your organization offer to provide, or provides, services to us.
 * When you correspond with us by electronic means using our Website.
@@ -142,14 +142,14 @@ While we endeavor to always protect our systems, sites, operations, and informat
 
 ### 5 Storage, disclosure to third parties and cross-border transfers
 
-##### Cap Table Data (France)
+##### Cap Table Data (stored in France)
 **Disclosure to third parties**<br />
 We do not share Cap Table Data with anyone except as explicitly instructed by the company.
 
 **Cross-border transfers**<br />
 The Cap Table Data is stored in a secure data center in France. The data center provider has no access to the Cap Table Data.
 
-##### General Personal Data (Switzerland, France, USA)
+##### General Personal Data (stored in Switzerland, France, USA)
 **Disclosure to third parties**<br />
 In the context of our business activities and in line with the Purposes set out in Section 3 and the applicable data protection laws, we may transfer General Personal Data to third parties (together with the **“Recipients”**) to process for us.
 
