--- a/src/markdown/legal/terms.mdx
+++ b/src/markdown/legal/terms.mdx
@@ -24,7 +24,7 @@ We offer free and purchased Services to you based on the detailed description on
   <dt>Free Services</dt>
   <dd>
 
-  We may make part of our Services available for free on a permanent basis, or you may have access as an external user such as a shareholder, or another third party such as a consultant or lawyer (an **“External User”**), to our Services free of charge (**“Free Services”**). For Free Services, we will make the Services available to you pursuant to these Terms, and any applicable Order Confirmations. For details of the Order Confirmation, please contact the customer you are accessing the Data for.
+  We may make part of our Services available for free on a permanent basis, or you may have access as an external user such as a shareholder, or another third party such as a consultant or lawyer (an **“External User”**), to our Services free of charge (**“Free Services”**). For Free Services, we will make the Services available to you pursuant to these Terms, and any applicable Order Confirmations. For details on the Order Confirmation, please contact the Customer you are accessing the Data for.
 
   </dd>
   <dt>Purchased Services</dt>
@@ -60,7 +60,7 @@ Data imported into the Application by you or by External Users on your behalf.
   <dt>Ownership</dt>
   <dd>
 
-  Your Data is yours or the person or company you act for, regardless of whether it was imported into the Application by you, or by third parties or us on your behalf.
+  Your Data belongs to you or the person or company you act for, regardless of whether it was imported into the Application by you, or by third parties or us on your behalf.
 
   </dd>
   <dt>Related rights</dt>
