--- a/src/markdown/legal/dpa.mdx
+++ b/src/markdown/legal/dpa.mdx
@@ -1,11 +1,10 @@
 ---
 date: "2019-03-26"
-title: "GDPR Data Processing Addendum (“DPA”)"
+title: "Data Processing Addendum"
 description: "Data Processing Addendum for GDRP compliance at Ledgy"
 ---
 
 Ledgy AG, a company incorporated under the laws of Switzerland, having its registered office and principal place of business on Forchstrasse 60, 8008 Zurich, Switzerland, as registered with the Commercial Register of the Canton of Zurich under number CHE-261.454.963 (**“Ledgy”**, the **“Data Processor”** or the **“Processor”**), and the customer (the **“Customer”** or the **“Controller”**), hereby agree as follows:
-
 
 
 ### 1 Scope
