--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -386,11 +386,11 @@ msgstr "Jetzt Kostenlos Testen"
 
 #: src/pages/index.jsx:26
 msgid "Get your cap table and employee participation plans right, from the beginning. Make your financing rounds a success and engage your investors and employees. Know your data is safe and compliant."
-msgstr "Erstelle deinen Cap Table und Mitarbeiterbeteiligungspläne von Anfang an richtig. Bringe deine Finanzierungsrunden zu einem Erfolg und motiviere deine Investoren und Mitarbeiter. Stelle sicher, dass Ihre Daten sicher und konform sind."
+msgstr "Erstelle deinen Cap Table und Mitarbeiterbeteiligungspläne von Anfang an richtig. Bringe deine Finanzierungsrunden zu einem Erfolg und motiviere deine Investoren und Mitarbeiter. Stelle sicher, dass deine Daten sicher und konform sind."
 
 #: src/layouts/index.jsx:349
 msgid "Get your cap table and employee participation plans right, from the beginning. Make your financing rounds a success and engage your investors and employees. Know your data is safe and compliant. Try now for free!"
-msgstr "Erstelle deinen Cap Table und Mitarbeiterbeteiligungspläne von Anfang an richtig. Bringe deine Finanzierungsrunden zu einem Erfolg und motiviere deine Investoren und Mitarbeiter. Stelle sicher, dass Ihre Daten sicher und konform sind. Jetzt kostenlos testen!"
+msgstr "Erstelle deinen Cap Table und Mitarbeiterbeteiligungspläne von Anfang an richtig. Bringe deine Finanzierungsrunden zu einem Erfolg und motiviere deine Investoren und Mitarbeiter. Stelle sicher, dass deine Daten sicher und konform sind. Jetzt kostenlos testen!"
 
 #: src/layouts/index.jsx:232
 msgid "Getting Started"
