--- a/src/markdown/help/getting-started.mdx
+++ b/src/markdown/help/getting-started.mdx
@@ -34,7 +34,7 @@ If you choose not to use the onboarding steps above, here are the basics of how 
 
 ##### Add new transactions
 
-- Got to the transactions page.
+- Go to the transactions page.
 - Click on _Add Transactions_ and choose the transaction you’d like to add. Fill in the required details and click on save.
 - Once the transaction appears in the transactions list, you can also __attach the corresponding documents__ such as a legal contract:
 
