last mini fixes

--- a/src/markdown/legal/privacy-policy.mdx
+++ b/src/markdown/legal/privacy-policy.mdx
@@ -56,6 +56,9 @@ The following compilation will help you understand which data we handle and in w
       Operating system and platform
     </td>
   </tr>
+</table>
+
+<table class="table table-bordered table-striped">
   <tr>
     <th />
     <th>Provided to us</th>
